objects/OSI_History__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_b_w_Processing_SOS__c</fullName>
        <formula>Submitted_to_SOS_Date__c - Submitted_to_Processing_Date__c</formula>
        <inlineHelpText>No. of Days between &quot;Submitted to Processing&quot; &amp; &quot;Submitted to SOS&quot;</inlineHelpText>
        <label>Days b/w Processing &amp; SOS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_till_Completed__c</fullName>
        <formula>IF ( (  Completed_Date__c -  Submitted_to_Processing_Date__c ) &gt;=0,
 Completed_Date__c -  Submitted_to_Processing_Date__c,
 NULL )</formula>
        <label>Days till Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_till_Dissolution_Completed_Fnl_Tax__c</fullName>
        <formula>IF( (Dissolution_Completed_Final_Tax_Date__c  -  Submitted_to_Processing_Date__c) &gt;= 0, 
Dissolution_Completed_Final_Tax_Date__c  -  Submitted_to_Processing_Date__c,
NULL )</formula>
        <label>Days till Dissolution Completed-Fnl Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_till_Drafted_STC__c</fullName>
        <formula>IF( ( Drafted_STC_Date__c -  Submitted_to_Processing_Date__c ) &gt;=0, 
Drafted_STC_Date__c -  Submitted_to_Processing_Date__c, NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days till Drafted, STC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_till_Tax_Clearance_Letter_Requested__c</fullName>
        <formula>IF ( (  Tax_Clearance_Letter_Requested_Date__c -  Submitted_to_Processing_Date__c ) &gt;= 0,
  Tax_Clearance_Letter_Requested_Date__c -  Submitted_to_Processing_Date__c,
  NULL )</formula>
        <label>Days till Tax Clearance Letter Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_till_Waiting_on_tax_clearance__c</fullName>
        <formula>If ( ( Waiting_on_Tax_Clearance_Date__c -  Submitted_to_Processing_Date__c ) &gt;= 0,
Waiting_on_Tax_Clearance_Date__c -  Submitted_to_Processing_Date__c ,
NULL )</formula>
        <label>Days till Waiting on tax clearance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dissolution_Completed_Final_Tax_Date__c</fullName>
        <label>Dissolution Completed - Final Tax Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drafted_STC_Date__c</fullName>
        <label>Drafted, STC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSI_Current_Stage__c</fullName>
        <formula>Text(OSI__r.Processing_Stage__c )</formula>
        <label>OSI Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSI</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>OSI Histories</relationshipLabel>
        <relationshipName>OSI_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_to_Processing_Date__c</fullName>
        <label>Submitted to Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_to_SOS_Date__c</fullName>
        <label>Submitted to SOS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Clearance_Letter_Requested_Date__c</fullName>
        <label>Tax Clearance Letter Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiting_on_Tax_Clearance_Date__c</fullName>
        <label>Waiting on Tax Clearance Date</label>
        <type>Date</type>
    </fields>
    <label>OSI History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OSI__c</columns>
        <columns>OSI_Current_Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_OSI_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>OSI History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSI Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>